<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.totvs.beetlesrestaurant.CheckInActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight=".9"
        android:background="#ff5915">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/textViewTitle"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:textColor="#ffffff"
            android:textSize="35dp"
            android:textAlignment="gravity"
            android:gravity="bottom|left" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/imageViewLogoRestaurant"
            android:src="@drawable/keep_calm_and_wait"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/lbl_group_size"
            android:id="@+id/textViewMessage"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:textColor="#ff5915"
            android:textSize="30dp"
            android:textAlignment="gravity"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="#ff5915">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/lbl_number_1"
            android:id="@+id/btn_group_1"
            android:background="#ff5915"
            android:layout_weight="1"
            android:layout_margin="2dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/lbl_number_2"
            android:id="@+id/btn_group_2"
            android:background="#ffffff"
            android:layout_weight="1"
            android:layout_margin="2dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/lbl_number_3"
                android:id="@+id/btn_group_3"
                android:background="#ffffff"
                android:layout_weight="1"
                android:layout_margin="2dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/lbl_number_4"
                android:id="@+id/btn_group_4"
                android:background="#ffffff"
                android:layout_weight="1"
                android:layout_margin="2dp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/activity_button_height_default"
            android:text="@string/lbl_line_size"
            android:id="@+id/textViewLine"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:textColor="#ff5915"
            android:textSize="15dp"
            android:textAlignment="gravity"
            android:gravity="right|bottom" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="@dimen/activity_button_height_default"
            android:text="@string/lbl_wait_in_line"
            android:id="@+id/BtnWaitInLine"
            android:background="#ff5915"
            android:layout_margin="2dp" />
    </LinearLayout>

</LinearLayout>
